QQuickFlickable: release drag if receiving QEvent::TouchCancel

If a TouchCancel event is sendt to a Flickable, it should abort
any current dragging operation done by the user. This patch will
ensure that we do so.

Pick-to: 6.5
Fixes: QTBUG-117160
Change-Id: Iff332e597a0502396c2fd0e4988f01ab2119314d
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
Reviewed-by: Seokha Ko <seokha.ko@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 5093e4c24347a2044e23ba057c0dfdc64df5019d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>