tests/auto/quick/qquickflickable/tst_qquickflickable.cpp
@@ -227,6 +227,7 @@ private slots:
     void coalescedMove();
     void onlyOneMove();
     void proportionalWheelScrolling();
+    void touchCancel();
     void pixelAlignedEndPoints();
 
 private:
@@ -3307,6 +3308,34 @@ void tst_qquickflickable::proportionalWheelScrolling() // QTBUG-106338 etc.
 
     QVERIFY(flickable->property("ended").value<bool>());
     QCOMPARE(flickable->property("movementsAfterEnd").value<int>(), 0);
+}
+
+void tst_qquickflickable::touchCancel()
+{
+    QQuickView window;
+    QVERIFY(QQuickTest::showView(window, testFileUrl("flickable03.qml")));
+    QQuickViewTestUtils::centerOnScreen(&window);
+    QVERIFY(window.isVisible());
+
+    QQuickFlickable *flickable = qobject_cast<QQuickFlickable*>(window.rootObject());
+    QVERIFY(flickable != nullptr);
+
+    QSignalSpy movementStartedSpy(flickable, SIGNAL(movementStarted()));
+    QSignalSpy movementEndedSpy(flickable, SIGNAL(movementEnded()));
+
+    int touchPosY = 10;
+    QTest::touchEvent(&window, touchDevice).press(0, {10, touchPosY}).commit();
+    QQuickTouchUtils::flush(&window);
+
+    for (int i = 0; i < 3; ++i) {
+        touchPosY += qApp->styleHints()->startDragDistance();
+        QTest::touchEvent(&window, touchDevice).move(0, {10, touchPosY}).commit();
+        QQuickTouchUtils::flush(&window);
+    }
+
+    QTRY_COMPARE(movementStartedSpy.size(), 1);
+    QWindowSystemInterface::handleTouchCancelEvent(nullptr, touchDevice);
+    QTRY_COMPARE(movementEndedSpy.size(), 1);
 }
 
 void tst_qquickflickable::pixelAlignedEndPoints()
